# pytest_dparam

./: .gitignore  README.md  demo.py  pyproject.toml  pytest_dparam.py
tests/: test_d_parametrize.py
